tests/transpiler/x/hs/map_in_operator.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
import qualified Data.Map as Map
m = Map.fromList [(1, "a"), (2, "b")]

main :: IO ()
main = do
    putStrLn (if 1 `elem` m then "1" else "0")
    putStrLn (if 3 `elem` m then "1" else "0")
